# AgentTree

./: .gitignore  Embeddings.py  LLM.py  README.md  VectorBase.py  build_kg.py  demo.py  requirements.txt  setup_coregpu.sh  test_single_txt.py  utils.py
AI_database2_txt_extracted/: 11_Dependability of railway control & communication systems.txt  12_principles of railway safety engineering.txt  17_Safety engineering for rway control and comms systems v1.txt  20190917_东铁线_ERL_Derailment_Incident_Report_(Chi).txt  2024_Communications-Based Train Control (CBTC) Komponenten, Funktionen und Betrieb (German Edition) _LarsSchnieder.txt  2024_上海嘉定沪嘉高速-嘉闵高架联络线 新建工程项目“12·22”较大 起重伤害事故调查报告.txt  2024_地铁昌平线“7·25”列车脱轨事故调查报告.txt  21_Railway Systems Mgt v6.txt  22_Interfaces and Interactions between Railway Control v2.txt  24_Points.txt  26_SIL.txt  29_Signalling the Layout_FINAL190325.txt  7_Train detection.txt  8_Interlocking.txt  Baseline3-mr1_subset-026_v340.txt  CZJST 0028—2015城市轨道交通CBTC信号系统-ATP子系统规范.txt  CZJST 0029—2015城市轨道交通CBTC信号系统-ATO子系统规范.txt  GB∕T 20438.2-2017 电气,电子,可编程电子安全相关系统的功能安全第2部分：电气∕电子∕可编程电子安全相关系统的要求.txt  GB∕T 20438.3-2017 电气,电子,可编程电子安全相关系统的功能安全 第3部分.txt  GB∕T 34590.1-2022 道路车辆功能安全第1部分：术语.txt  GB∕T 34590.10-2022道路车辆功能安全第10部分：指南.txt  GB∕T 34590.11-2022道路车辆功能安全第11部分：半导体应用指南.txt  GB∕T 34590.8-2022道路车辆功能安全第8部分：支持过程.txt  GB∕T 34590.9-2022道路车辆功能安全第9部分：以汽车安全完整性等级为导向和以安全为导向的分析.txt  GB∕T 43267-2023道路车辆预期功能安全.txt  IEEE 1474.1-2004.txt  IEEE Std 1474.1-2025 IEEE Standard for Communications-Based Train Control (CBTC) Performance and Functional Requirements.txt  R122020_201116_Wanstead_Park_23012020.txt  (+22 more)
skill_agent_tree/: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART_NEW.md  README_NEW.md  SETUP.md  SUMMARY.md  __init__.py  agent_tree.py  examples_new.py  main.py  pyproject.toml  requirements.txt  test_new.py  tree_node_agent.py
(+319 files in other folders)
